--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -30,4 +30,4 @@ noinst_PROGRAMS = RunTest
 
 RunTest_SOURCES = RunTest.C
 RunTest_CPPFLAGS = -I$(top_srcdir)/include
-RunTest_LDADD =  $(top_builddir)/src/libwasmaudio.la
+RunTest_LDADD =  $(top_builddir)/src/libSwigCNodejs.la
